# Chess

./: .gitignore  Actions.hs  AvailableMoves.hs  Board.hs  Checks.hs  Chess.cabal  Figures.hs  GameCycle.hs  GameTools.hs  HypotheticalAttacks.hs  Main.hs  Properties.hs
