name:                Chess
version:             0.1.0.0
author:              Victor
maintainer:          horoyami@yandex.ru
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable Chess
  main-is:             Main.hs

  build-depends:       base >=4.12 && <4.13,
                       ansi-terminal

  default-language:    Haskell2010

  other-modules:       Figures
                       Board
                       Checks
                       GameCycle
